change directory structure to fix package

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,11 +17,11 @@ classifiers =
 
 [options]
 package_dir =
-    = HaMqtt
+    = src
 packages = find:
 python_requires = >=3.6
 install_requires =
     paho-mqtt~=1.5.1
 
 [options.packages.find]
-where = HaMqtt
+where = src
