#0: fix pipeline * fix poetry installation path from github to poetry domain * fix wheel version * move wheel and sphinx to dev dependencies

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ cache:
     - venv/
 
 before_script:
-  - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-  - source $HOME/.poetry/env
+  - curl -sSL https://install.python-poetry.org | python3 -
+  - export PATH="/root/.local/bin:$PATH"
   - poetry install
 
 stages:
