--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,12 @@ image: python:3.8
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
 
+workflow:
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_TAG
+
+
 cache:
   paths:
     - .cache/pip
@@ -11,6 +17,8 @@ cache:
 before_script:
   - curl -sSL https://install.python-poetry.org | python3 -
   - export PATH="/root/.local/bin:$PATH"
+  # make dependencies cachable
+  - poetry config virtualenvs.in-project true
   - poetry install
 
 stages:
