--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,19 +20,20 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-paho-mqtt = "^1.6"
+paho-mqtt = "^2"
 
-[tool.poetry.dev-dependencies]
-Sphinx = "4.5.0"
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+beautifulsoup4 = "^4.11.1"
+Sphinx = "^4.5.0"
 sphinx-rtd-theme = "^1.0.0"
 furo = "~2022.4.7"
 myst-parser = "^0"
 pylint = "^2"
 wheel = "^0.38"
 
-
-[tool.poetry.group.dev.dependencies]
-beautifulsoup4 = "^4.11.1"
 
 [tool.pylint.master]
 persistent = "n"
