--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ furo = "~2022.4.7"
 myst-parser = "^0"
 pylint = "^2"
 wheel = "^0.38"
+mypy = "^1"
 
 
 [tool.pylint.master]
@@ -42,6 +43,9 @@ max-line-length = 119
 max-attributes = 20
 max-args = 8
 
+[tool.mypy]
+disallow_untyped_defs = "true"
+disallow_incomplete_defs = "true"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
